# banana

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DEBUGGING.md  MODELS_ROADMAP.md
example_code/: 2502_BLI_nb_screen.py  BLI_code_.ipynb  monobody8_(1t24_s24920_1_dimer.txt
example_data/20260311 Nb6/: 260311_001.frd  260311_002.frd  260311_003.frd  260311_004.frd  260311_005.frd  260311_006.frd  260311_007.frd  260311_008.frd  260311_009.frd  260311_010.frd  260311_011.frd  260311_012.frd  260311_013.frd  260311_014.frd  260311_015.frd  260311_016.frd  260311_ExpMethod.fmf  A1.xls  B1.xls  C1.xls  D1.xls  E1.xls  ExcelReport.xls  F1.xls  G1.xls  H1.xls  Settings_DataAnalysis.fsd  Settings_WellInfo.xml  TemperatureLog.csv  processing_settings.yaml
example_data/20260311 Nb6/Results/: A1Results.txt  B1Results.txt  C1Results.txt  D1Results.txt  (+5 more)
example_data/20260311 Nb8/: 260311_001.frd  260311_002.frd  260311_003.frd  260311_004.frd  260311_005.frd  260311_006.frd  260311_007.frd  260311_008.frd  260311_009.frd  260311_010.frd  260311_011.frd  260311_012.frd  260311_013.frd  260311_014.frd  260311_015.frd  260311_016.frd  260311_ExpMethod.fmf  A3.xls  B3.xls  C3.xls  D3.xls  E3.xls  ExcelReport.xls  F3.xls  G3.xls  H3.xls  Settings_DataAnalysis.fsd  Settings_WellInfo.xml  TemperatureLog.csv  processing_settings.yaml
examples/: run_BLI.py  run_bli_analysis.py
literature/bph12106-sup-0001-s/: 2012 BJP 0734 RC.R1 resubmission no figures and scheme.doc
scripts/: autotune_vs_legacy.py
src/banana/: __init__.py
tests/: test_new_models.py
(+36 files in other folders)
