[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banana"
version = "0.1.0"
description = "Analysis of kinetic binding measurements on proteins (BLI, SPR)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Paul Ruijgrok"}
]
keywords = ["biophysics", "kinetics", "BLI", "SPR", "protein", "binding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "openpyxl>=3.0",
    "xlrd>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
banana-bli = "banana.cli.run_bli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
"Homepage" = "https://github.com/paulruijgrok/banana"
"Documentation" = "https://github.com/paulruijgrok/banana#readme"

[tool.setuptools.packages.find]
where = ["src"]
